retrieve history via REST
